Sutter Health/src/objects/Custom_Benefit_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Actuarial_Minimum_Value__c</fullName>
        <label>Actuarial/Minimum Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allergy_Test_Services__c</fullName>
        <label>Allergy Test Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC_Version__c</fullName>
        <label>Ancillary EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA_Version__c</fullName>
        <label>Ancillary GSA Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_GSA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary GSA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB_Version__c</fullName>
        <label>Ancillary SOB Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary_SOB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ancillary SOB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BCM_Version__c</fullName>
        <description>This is used to store BCM Version</description>
        <label>BCM Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BCM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BCM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BPA_Internal_Status__c</fullName>
        <label>BPA Internal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Compliance Review</fullName>
                </value>
                <value>
                    <fullName>Pending Underwriting Review</fullName>
                </value>
                <value>
                    <fullName>Pending DMHC Review</fullName>
                </value>
                <value>
                    <fullName>Pending BPA Review</fullName>
                </value>
                <value>
                    <fullName>Pending Legal Review</fullName>
                </value>
                <value>
                    <fullName>Pending Sales Clarification</fullName>
                </value>
                <value>
                    <fullName>Pending MHPAEA Testing Results</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BPA_Team_Comments__c</fullName>
        <label>BPA Team Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Grid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan to Customize</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SHP_Benefit_Grid__c.Market_Segment__c</field>
                <operation>equals</operation>
                <value>Large Group</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SHP_Benefit_Grid__c</referenceTo>
        <relationshipLabel>Custom Benefit Plans</relationshipLabel>
        <relationshipName>Custom_Benefit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Benefit_Plan_ID__c</fullName>
        <label>Benefit Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C04_Lifetime_Maximum__c</fullName>
        <label>Lifetime Maximum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Eye_exams_for_refraction__c</fullName>
        <label>Eye exams for refraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Family_planning_counseling_services__c</fullName>
        <label>Family planning counseling and services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Hearing_exams__c</fullName>
        <label>Hearing exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Immunizations_including_vaccines__c</fullName>
        <label>Immunizations (including vaccines)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Physical_maintenance_exams__c</fullName>
        <label>Physical maintenance exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Prenatal_care_preconception_visits__c</fullName>
        <label>Prenatal care and preconception visits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Preventive_X_rays_screenings_tests__c</fullName>
        <label>Preventive X-rays, screenings and labs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C05_Well_child_preventive_care_exams__c</fullName>
        <label>Well-child preventive care exams</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Acupuncture__c</fullName>
        <label>Acupuncture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Outpatient_habilitation_services__c</fullName>
        <label>Outpatient habilitation services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C06_Outpatient_rehabilitation_services__c</fullName>
        <label>Outpatient rehabilitation services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Diagnostic_therapeutic_X_rays__c</fullName>
        <label>Diagnostic and therapeutic X-rays</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Imaging_e_g_MRI_CT_and_PET_scans__c</fullName>
        <label>Imaging(e.g. MRI, CT, and PET scans)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Laboratory_tests__c</fullName>
        <label>Laboratory tests</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Outpatient_surgery_physician_surgeon__c</fullName>
        <label>Outpatient surgery (physician/surgeon)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C07_Outpatient_visit_non_office_visit__c</fullName>
        <label>Outpatient visit (non-office visit)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C08_Physician_surgeon_fees__c</fullName>
        <label>Physician/surgeon fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C09_Emergency_room_physician_fee__c</fullName>
        <label>Emergency room physician fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C09_Urgent_care_consultations_exams__c</fullName>
        <label>Urgent care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C10_Ambulance_Services__c</fullName>
        <label>Ambulance Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_1__c</fullName>
        <label>Mail-Order – Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_2__c</fullName>
        <label>Mail-Order – Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C11_Mail_Order_Tier_3__c</fullName>
        <label>Mail-Order – Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C12_Durable_Medical_Equipment__c</fullName>
        <label>Durable Medical Equipment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Inpatient_facility__c</fullName>
        <label>MH/SUD inpatient facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Inpatient_physician_surgeon_fees__c</fullName>
        <label>MH/SUD inpatient physician/surgeon fees</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Other_outpatient_services__c</fullName>
        <label>MH/SUD other outpatient services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Outpatient_office_visits_group__c</fullName>
        <label>MH/SUD outpatient office visits – group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C13_Outpatient_office_visits_individual__c</fullName>
        <label>MH/SUD outpatient office visits - ind.</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C14_Home_health_care__c</fullName>
        <label>Home health care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C15_Delivery_all_hospital_inpatient__c</fullName>
        <label>Delivery and all hospital inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C15_Delivery_all_professional_inpatient__c</fullName>
        <label>Delivery and all professional inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Devices_supplies__c</fullName>
        <label>Prosth/ortho devices/ostomy/uro supplies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Hospice_care__c</fullName>
        <label>Hospice care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Infertility_Services__c</fullName>
        <label>Infertility Services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Orthotics_and_Special_Footwear__c</fullName>
        <label>Orthotics and Special Footwear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C16_Skilled_Nursing_Facility_services__c</fullName>
        <label>Skilled Nursing Facility services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Basic_pediatric_dental_services__c</fullName>
        <label>Basic pediatric dental services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Diagnostic_pediatric_dental__c</fullName>
        <label>Diag. and preventive pediatric dental</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Major_pediatric_dental_services__c</fullName>
        <label>Major pediatric dental services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Orthodontic_pediatric_dental_service__c</fullName>
        <label>Orthodontic pediatric dental services</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Pediatric_vision_services_eye_exam__c</fullName>
        <label>Pediatric vision services: eye exam</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>C17_Pediatric_vision_services_eyewear__c</fullName>
        <label>Pediatric vision services: eyewear</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cost_Share__c</fullName>
        <label>Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <formula>IF(Plan_Related_to_Account__r.DBA__c != NULL &amp;&amp; Plan_Related_to_Account__r.DBA__c != &apos;&apos;,Plan_Related_to_Account__r.DBA__c,&apos;N/A&apos;)</formula>
        <label>DBA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMHC_Approval_Status__c</fullName>
        <label>DMHC Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DOV__c</fullName>
        <label>DOV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deductible__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC_Version__c</fullName>
        <description>This is used for EOC Version</description>
        <label>EOC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emergency_Room__c</fullName>
        <label>Emergency Room</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employer_Type__c</fullName>
        <formula>IF(TEXT(Plan_Related_to_Account__r.Employer_Type__c) != NULL &amp;&amp; TEXT(Plan_Related_to_Account__r.Employer_Type__c) != &apos;&apos;,TEXT(Plan_Related_to_Account__r.Employer_Type__c),&apos;N/A&apos;)</formula>
        <label>Employer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EndNote01__c</fullName>
        <label>01</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndNote02__c</fullName>
        <label>02</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EndNote03__c</fullName>
        <label>03</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facility_fee_e_g_hospital_room__c</fullName>
        <label>Facility fee (e.g. hospital room)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_Deductible__c</fullName>
        <inlineHelpText>for Family of two or more Members</inlineHelpText>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_OOPM__c</fullName>
        <inlineHelpText>for a Family of two or more Members</inlineHelpText>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Family_Deductible__c</fullName>
        <inlineHelpText>for Family of one or more Members</inlineHelpText>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ind_Family_OOPM__c</fullName>
        <inlineHelpText>for Family of one or more Members</inlineHelpText>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inpatient__c</fullName>
        <label>Inpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActivelyMarketed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Actively Marketed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCustom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Plan?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsHMO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HMO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMirrored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mirrored?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPartDCreditable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Part D Creditable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rider?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Large Group</fullName>
                </value>
                <value>
                    <fullName>Small Group</fullName>
                </value>
                <value>
                    <fullName>Individual Under 65</fullName>
                </value>
                <value>
                    <fullName>Individual Over 65</fullName>
                </value>
                <value>
                    <fullName>Mid Group</fullName>
                </value>
                <value>
                    <fullName>National Account</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Medical_OR_Rider__c</fullName>
        <label>Medical OR Rider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_ID__c</fullName>
        <label>Object ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Visit__c</fullName>
        <label>Office Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Pocket_Maximum__c</fullName>
        <inlineHelpText>for a Family of one Member</inlineHelpText>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outpatient__c</fullName>
        <label>Outpatient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Disclaimer_Message__c</fullName>
        <label>Plan Disclaimer Message</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Name__c</fullName>
        <label>Plan Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Related_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan Related to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Custom Benefit Plans</relationshipLabel>
        <relationshipName>Custom_Benefit_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available for Sale - Approved</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Rejected by BPA Team</fullName>
                </value>
                <value>
                    <fullName>Soft Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected by Executive Group</fullName>
                </value>
                <value>
                    <fullName>Submitted to Executive Group</fullName>
                </value>
                <value>
                    <fullName>Pending with BPA Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plan_Type__c</fullName>
        <label>Plan Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Year__c</fullName>
        <label>Plan Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Plan_ID__c</fullName>
        <label>Previous Year Plan ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Class__c</fullName>
        <label>Product Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Coinsurance</fullName>
                </value>
                <value>
                    <fullName>HDHP</fullName>
                </value>
                <value>
                    <fullName>HMO Local</fullName>
                </value>
                <value>
                    <fullName>Mirrored</fullName>
                </value>
                <value>
                    <fullName>Split</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Types__c</fullName>
        <label>Product Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HMO - Plus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_1__c</fullName>
        <label>RX - Tier 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_2__c</fullName>
        <label>RX - Tier 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RX_Tier_3__c</fullName>
        <label>RX - Tier 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>SHP Sales Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Rider_Cost_Share__c</fullName>
        <label>Rider Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Family__c</fullName>
        <label>For an entire Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Ind_Family__c</fullName>
        <label>For any one Member in a Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rx_Deductible_Individual__c</fullName>
        <label>For self-only enrollment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC_Version__c</fullName>
        <description>This is used to capture SBC Version</description>
        <label>SBC Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SBC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialist_Office_Visit__c</fullName>
        <label>Specialist Office Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visit_Limit__c</fullName>
        <label>Rider Visit Limit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>distributionChannels__c</fullName>
        <label>distributionChannels</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Private Exchange</fullName>
                </value>
                <value>
                    <fullName>Direct</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fundingArrangements__c</fullName>
        <label>fundingArrangements</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fully Insured</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hixMetalLevel__c</fullName>
        <label>hixMetalLevel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isHDHP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HDHP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>memberFundings__c</fullName>
        <label>memberFundings</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>planTypeAlternate__c</fullName>
        <label>planTypeAlternate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Benefit Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Types__c</columns>
        <columns>Plan_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom_Plan_Final_Approver_Queue_Custom_Benefit_Plan</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Queue</filterScope>
        <label>Waiting for Final Approval</label>
        <queue>Custom_Plan_Final_Approver_Queue</queue>
        <sharedTo>
            <group>Custom_Plan_Final_Approver_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Final_Approved_Custom_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Available for Sale - Approved</value>
        </filters>
        <label>Final Approved Custom Plans</label>
        <sharedTo>
            <group>Custom_Plan_Final_Approver_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Accepted_Custom_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Accepted Custom Plans</label>
    </listViews>
    <listViews>
        <fullName>SHP_BPA_Custom_Plan_Final_Approver_Queue_Custom_Benefit_Plan</fullName>
        <filterScope>Queue</filterScope>
        <label>SHP BPA Custom Plan Final Approver Queue</label>
        <queue>SHP_BPA_Custom_Plan_Final_Approver_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_BPA_Custom_Plan_Soft_Approver_Queue_Custom_Benefit_Plan</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Queue</filterScope>
        <label>Waiting for Soft Approval</label>
        <queue>SHP_BPA_Custom_Plan_Soft_Approver_Queue</queue>
        <sharedTo>
            <group>SHP_BPA_Custom_Plan_Soft_Approver_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Custom_Plan_Executive_Queue_Custom_Benefit_Plan</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Executive Queue</label>
        <queue>SHP_Custom_Plan_Executive_Queue</queue>
        <sharedTo>
            <group>SHP_Executive_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue_Custom_Benefit_Plan</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales_Queue</queue>
        <sharedTo>
            <group>SHP_Sales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Soft_Approved_Custom_Plans</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>equals</operation>
            <value>Soft Approved</value>
        </filters>
        <label>Soft Approved Custom Plans</label>
    </listViews>
    <listViews>
        <fullName>Soft_Rejected_Custom_Plans</fullName>
        <columns>NAME</columns>
        <columns>Plan_Name__c</columns>
        <columns>Plan_Year__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Plan_Status__c</columns>
        <columns>Plan_Type__c</columns>
        <columns>Product_Class__c</columns>
        <columns>Product_Types__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plan_Status__c</field>
            <operation>contains</operation>
            <value>Rejected</value>
        </filters>
        <label>Soft Rejected Custom Plans</label>
    </listViews>
    <nameField>
        <label>Custom Plan ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Benefit Plans</pluralLabel>
    <recordTypes>
        <fullName>Final_Approval</fullName>
        <active>true</active>
        <label>Final Approval</label>
    </recordTypes>
    <recordTypes>
        <fullName>Soft_Approval</fullName>
        <active>true</active>
        <label>Soft Approval</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>